@@ -39,13 +39,20 @@ public class EmployeeServiceimpl implements IEmployeeService {
         return EmployeeMapper.mapToEmployeeDTO(employee);
     }
 
+//    @Override
+//    public List<EmployeeDTO> getAllEmployee() {
+//        List<Employee> employees=  employeeRepository.findAll();
+//
+//        return employees.parallelStream().map(data -> EmployeeMapper.mapToEmployeeDTO(data)).
+//                collect(Collectors.toList());
+//    }
+
     @Override
     public List<EmployeeDTO> getAllEmployee() {
         List<Employee> employees=  employeeRepository.findAll();
 
-        return employees.parallelStream().map(data -> EmployeeMapper.mapToEmployeeDTO(data)).
-                collect(Collectors.toList());
-    }   
-
+        return employees.parallelStream().map(EmployeeMapper::mapToEmployeeDTO)
+                .toList();
+    }
 
 }
